# enterprise-mcp-docs

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.json
docs/: faq.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/tools/: index.md
examples/claude-code-setup/: mcp-config.json
examples/cursor-setup/: mcp.json
project-notes/: development-roadmap.md  implementation-phases.md  project-insights.md
scripts/: setup.sh
src/enterprise_mcp_docs/: __init__.py  cli.py  crawl.py  mcp_server.py  server.py
src/enterprise_mcp_docs/providers/: __init__.py  base.py
tests/: conftest.py
tests/integration/: test_health_endpoint.py
tests/unit/: test_init.py  test_server.py
